kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: virtual-tryon-db
spec:
  selector:
    app: virtual-tryon-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
