kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: virtual-tryon-service
spec:
  selector:
    app: virtual-tryon
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
